--- a/index.html
+++ b/index.html
@@ -70,6 +70,39 @@
             padding: 20px 0;
             background-color: #00796b;
             color: white;
+
+            
+        }
+        .additional-resources {
+            width: 80%;
+            margin: 20px auto;
+            padding: 15px;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+
+        .additional-resources h2 {
+            color: #00796b;
+            margin-bottom: 10px;
+        }
+
+        .additional-resources ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .additional-resources li {
+            padding: 5px 0;
+        }
+
+        .additional-resources a {
+            color: #009688;
+            text-decoration: none;
+        }
+
+        .additional-resources a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -150,6 +183,13 @@
         </ol>
     </section>
 
+    <section class="additional-resources">
+        <h2>Research Timeline 📅</h2>
+        <ul>
+            <li><a href="C:/Users/vaish/Downloads/miro.html">Click here for the Interactive Timeline Board</a></li>
+        </ul>
+    </section>
+    
     <footer>
         <p>&copy; 2023 Chemistry Education. All rights reserved.</p>
     </footer>
