--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <section class="additional-resources">
         <h2>Research Timeline 📅</h2>
         <ul>
-            <li><a href="C:/Users/vaish/Downloads/miro.html">Click here for the Interactive Timeline Board</a></li>
+            <li><a href="miro.html">Click here for the Interactive Timeline Board</a></li>
         </ul>
     </section>
     
